Refonte de UserController et correction des problèmes de visibilité
Plusieurs changements significatifs ont été effectués dans ce commit :

1. La visibilité de la variable  dans la classe  a été modifiée de privée à protégée pour correspondre à sa déclaration dans la classe , résolvant ainsi le problème de discordance de visibilité.

2. Suppression de la déclaration redondante de la méthode  dans la classe . Nous utilisons désormais directement la méthode  de la classe , respectant ainsi les principes d'héritage et le principe DRY (Don't Repeat Yourself).

3. Correction de l'utilisation de la classe  pour nettoyer les entrées de l'utilisateur. C'est désormais fait via des appels de méthode statique (par exemple, ).

4. Ajout de la validation des données en utilisant les méthodes de nettoyage et de validation des entrées fournies par la classe .

Grâce à ces modifications, nous avons amélioré la cohérence du code, respecté les règles de visibilité de PHP et tiré parti des avantages de la programmation orientée objet.

--- a/design/auth/style.css
+++ b/design/auth/style.css
@@ -159,10 +159,8 @@ input {
 .container.right-panel-active .overlay-container{
 	transform: translateX(-100%);
 }
-.error {
-    color: red;
-    font-size: 0.8em;
-    margin-bottom: 10px;
+input.error {
+    border: 1px solid red;
 }
 .overlay {
 	background: #FF416C;
